--- a/colors-starter/css/main.css
+++ b/colors-starter/css/main.css
@@ -51,7 +51,7 @@ header {
 footer {
   width: 100%;
   height: 30px;
-  background: #e3e3e3;
+  background: #B0C4DE;
 }
 
 
@@ -78,9 +78,12 @@ footer {
   footer {
     background-color: #FFA500;
   }
-  
-}
 
+ .col-3 {
+   width: 50%
+ }
+}
+  
 
 /*---------- Desktops ----------*/
 @media (min-width: 1200px) {
@@ -104,4 +107,7 @@ footer {
     background-color:#9932CC;
   }
    
+  .col-3 {
+    width: 33.3%;
+  }
 }
